# anemoi-docs

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/actions/build_and_deploy/: action.yaml
.github/actions/deploy/: action.yaml
.github/workflows/: nighly_ci_hpc.yaml  nightly_ci_hpc.yaml  on_demand_ci_hpc.yaml  qa.yaml  qa.yml  readthedocs-pr-update.yml  system_level_test.yaml
docs/: code-of-conduct.rst  conf.py  contributing.rst  index.rst  overview.rst  requirements.txt
docs/contributing/: code_style.rst  contributing.rst  documentation.rst  environment.rst  governance.rst  guidelines.rst  roadmap.rst  testing.rst
docs/datasets/: about.rst  building.rst  building.yaml  filters.rst  images.pptx  options.rst  sources.rst  using.rst
docs/getting-started/: installing.rst  package-descriptions.rst  tour.rst
docs/installing/: developers.rst  users.rst
docs/schemas/: Makefile  dependencies-no-utils.dot  dependencies.dot
docs/training/: components.rst  examples.rst
docs/user-guide/: developer-guide.rst  developer-install.rst
docs/user_guide/: developer_install.rst
tests/: clean_up.sh  create_dataset.sh  global_test_dataset.yaml  train_model.sh  training_overrides_global.txt
tests/ecflow-prototype/: Makefile  deploy.py
tests/ecflow-prototype/configs/: config.yaml  execution_contexts.yaml  tools.yaml
tests/ecflow-prototype/suite/: nodes.py
tests/system-level/: README.md  build.sh  deploy.py  profiles.yaml
tests/system-level/anemoi_test/: config.py  (+1 more)
tools/: README.md  github-stats.py
(+14 files in other folders)
